# mariyam_usmon

./: Makefile  TODO  db.sqlite3  pyproject.toml  requirements.txt
root/: settings.py  urls.py
shop/: admin.py  forms.py  models.py  urls.py  views.py
shop/static/shop/assets/css/: fontawesome.min.css  slick-theme.css  slick-theme.min.css
shop/static/shop/assets/js/: bootstrap.bundle.min.js  jquery-1.11.0.min.js
shop/static/shop/css/: style.css
shop/static/shop/fonts/material-icon/css/: material-design-iconic-font.css
shop/static/shop/js/: script.js
shop/static/shop/scss/: style.scss
templates/: base.html  index.html
templates/auth/: about.html  contact.html  forgot-password.html  login.html  password_reset_complete.html  register.html  shop-single.html  shop.html
